    automatic orient thumbnails #183 [BWackNinja]
    add wallpaper Zoom mode #4 [BWackNinja]
    fix icon label centering #51 [BWackNinja]
    fix icon/compact cannot drag multiple #194
    restore Prefs SI File Sizes #117
    move Prefs Rubberband Select to context View|Style as detailed only
    add secondary sort by name to desktop-window #196
    updated russian translation
    hide unmounted /dev/ramN closes #202 
0.8.2   2012-10-25:
    fix --enable-hal build issues (affected 0.7.6 thru 0.8.1)
    overwrite dialog replace text view with labels
    add From: to task popup
    fix destination contained in source error
    fix cut paste directory replace error #174
    task popup From/To adjustments
0.8.1   2012-10-21:
    added task manager queue/pause #147
    disable task manager find
    set minimum dialog and task pane sizes #56
    added Tasks user manual section
    fix clang compile error #162
    fix hang on dir tree sel access error #164
    fix file search find within symlink dir #122
    add double-click opens file search result #109
    fix vfs move dest symlink device determination
    abort copy/move remove incomplete file
    move Sort submenu from Style to View submenu
    gtk 2.18 compatibility #146
    remove explicit libgdk-pixbuf2.0-0 dependency #146
    added precision timer for more accurate/smooth copy speeds
    btrfs moint point detection workaround #165
    fix segfault on blank Preferences Terminal setting #166
    add rxvt to terminal programs list #166
    desktop drop onto folder #45
    fix new tab path merged if the last dir spec is / #167
    libstartup-notification-0.9 or -1.0 optional #19 #146
    adjustment for build on debian squeeze (gtk 2.20 glib 2.24)
    ctrl-Q as default Exit key
    allow stop of exited task #168
    auto stop on bad exit status #168
    updated Russian translation
    added partial Dutch translation by tct1501
    remove vert scrollbar compact mode