@@ -16,7 +16,8 @@
     move Prefs Rubberband Select to context View|Style as detailed only
     add secondary sort by name to desktop-window #196
     updated russian translation
-    hide unmounted /dev/ramN closes #202 
+    hide unmounted /dev/ramN closes #202
+    fix make fail gtk2.18 replace gtk_dialog_get_widget_for_response
 0.8.2   2012-10-25:
     fix --enable-hal build issues (affected 0.7.6 thru 0.8.1)
     overwrite dialog replace text view with labels
